--- a/src/view/Dashboard.form
+++ b/src/view/Dashboard.form
@@ -100,6 +100,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="View All Credit"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_view_all_creditActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_view_credit">
       <Properties>
